--- a/electron-vuemusic/package.json
+++ b/electron-vuemusic/package.json
@@ -13,8 +13,11 @@
   "main": "src/background.js",
   "dependencies": {
     "core-js": "^3.6.5",
-    "electron-is-dev": "^1.2.0",
+    "dayjs": "^1.8.35",
+    "express": "^4.17.1",
     "register-service-worker": "^1.7.1",
+    "socket.io": "^2.3.0",
+    "spotify-web-api-js": "^1.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
