--- a/electron-vuemusic/package.json
+++ b/electron-vuemusic/package.json
@@ -17,8 +17,8 @@
     "register-service-worker": "^1.7.1",
     "spotify-web-api-js": "^1.5.0",
     "vue": "^2.6.11",
-    "vue-custom-scrollbar": "^1.3.0",
     "vue-router": "^3.2.0",
+    "vue2-perfect-scrollbar": "^1.5.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
