--- a/electron-vuemusic/package.json
+++ b/electron-vuemusic/package.json
@@ -18,6 +18,7 @@
     "spotify-web-api-js": "^1.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-virtual-scroller": "^1.0.10",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
