--- a/electron-vuemusic/package.json
+++ b/electron-vuemusic/package.json
@@ -17,6 +17,7 @@
     "register-service-worker": "^1.7.1",
     "spotify-web-api-js": "^1.5.0",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.2.0",
     "vue-virtual-scroller": "^1.0.10",
     "vue2-perfect-scrollbar": "^1.5.0",
