--- a/electron-vuemusic/package.json
+++ b/electron-vuemusic/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electron-vuemusic",
-  "version": "0.1.0",
+  "name": "vuemusic",
+  "version": "5.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,10 +10,12 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
-  "main": "src/background.js",
+  "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "ffbinaries": "^1.1.4",
+    "filenamify": "^4.1.0",
     "register-service-worker": "^1.7.1",
     "spotify-web-api-js": "^1.5.0",
     "vue": "^2.6.11",
@@ -23,9 +25,8 @@
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
-    "ffbinaries": "^1.1.4",
-    "ytdl-core": "^3.2.2",
-    "youtube-search": "^1.1.4"
+    "youtube-search": "^1.1.4",
+    "ytdl-core": "^3.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -33,7 +34,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "electron": "^10.1.2",
+    "electron": "^8.0.0",
     "electron-devtools-installer": "^3.1.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
