--- a/electron-vuemusic/package.json
+++ b/electron-vuemusic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuemusic",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "Music streaming program that uses the Spotify API",
   "keywords": [
     "Music",
@@ -23,7 +23,9 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@trodi/electron-splashscreen": "^1.0.0",
     "core-js": "^3.6.5",
+    "electron-store": "^6.0.0",
     "express": "^4.17.1",
     "ffbinaries": "^1.1.4",
     "filenamify": "^4.1.0",
