--- a/vuemusic/package.json
+++ b/vuemusic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuemusic",
-  "version": "5.1.0",
+  "version": "5.1.1",
   "description": "Music streaming program that uses the Spotify API",
   "keywords": [
     "Music",
@@ -25,32 +25,32 @@
   "dependencies": {
     "@trodi/electron-splashscreen": "^1.0.0",
     "core-js": "^3.6.5",
-    "electron-store": "^6.0.0",
+    "electron-store": "^6.0.1",
     "express": "^4.17.1",
     "ffbinaries": "^1.1.4",
-    "filenamify": "^4.1.0",
+    "filenamify": "^4.2.0",
     "idb-keyval": "^3.2.0",
     "register-service-worker": "^1.7.1",
     "spotify-web-api-js": "^1.5.0",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.4.8",
     "vue-virtual-scroller": "^1.0.10",
     "vue2-perfect-scrollbar": "^1.5.0",
-    "vuetify": "^2.2.11",
+    "vuetify": "^2.3.15",
     "vuex": "^3.4.0",
     "youtube-search": "^1.1.4",
-    "ytdl-core": "^3.2.2"
+    "ytdl-core": "^3.4.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "electron": "^8.0.0",
+    "@vue/cli-plugin-babel": "^4.5.8",
+    "@vue/cli-plugin-pwa": "^4.5.8",
+    "@vue/cli-plugin-router": "^4.5.8",
+    "@vue/cli-plugin-vuex": "^4.5.8",
+    "@vue/cli-service": "^4.5.8",
+    "electron": "^8.5.2",
     "electron-devtools-installer": "^3.1.0",
-    "sass": "^1.19.0",
+    "sass": "^1.27.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
     "vue-cli-plugin-vuetify": "~2.0.7",
