--- a/vuemusic/package.json
+++ b/vuemusic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuemusic",
-  "version": "5.1.2",
+  "version": "5.1.3",
   "description": "Music streaming program that uses the Spotify API",
   "keywords": [
     "Music",
@@ -24,21 +24,21 @@
   "main": "background.js",
   "dependencies": {
     "@trodi/electron-splashscreen": "^1.0.0",
-    "core-js": "^3.7.0",
+    "core-js": "^3.8.1",
     "electron-store": "^6.0.1",
     "express": "^4.17.1",
     "ffbinaries": "^1.1.4",
     "filenamify": "^4.2.0",
     "idb-keyval": "^3.2.0",
-    "register-service-worker": "^1.7.1",
+    "register-service-worker": "^1.7.2",
     "spotify-web-api-js": "^1.5.1",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.4.9",
     "vue-virtual-scroller": "^1.0.10",
     "vue2-perfect-scrollbar": "^1.5.0",
-    "vuetify": "^2.3.18",
-    "vuex": "^3.4.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.0",
     "youtube-search": "^1.1.4",
     "ytdl-core": "latest"
   },
@@ -50,10 +50,10 @@
     "@vue/cli-service": "^4.5.9",
     "electron": "^8.5.5",
     "electron-devtools-installer": "^3.1.0",
-    "sass": "^1.29.0",
+    "sass": "^1.30.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-electron-builder": "^2.0.0-rc.5",
-    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-cli-plugin-vuetify": "^2.0.8",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   }
