--- a/vuemusic/package.json
+++ b/vuemusic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuemusic",
-  "version": "5.1.5",
+  "version": "5.1.6",
   "description": "Music streaming program that uses the Spotify API",
   "keywords": [
     "Music",
@@ -50,7 +50,7 @@
     "@vue/cli-service": "^4.5.11",
     "electron": "^8.5.5",
     "electron-devtools-installer": "^3.1.0",
-    "sass": "^1.32.6",
+    "sass": "~1.32.6",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-electron-builder": "^2.0.0-rc.6",
     "vue-cli-plugin-vuetify": "^2.1.0",
